--- a/marseille.html
+++ b/marseille.html
@@ -66,7 +66,7 @@
                             <li><a href="bulletin.html">Bulletin</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">Dons</a></li>
+                    <li><a href="dons.html">Dons</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
