--- a/bulletin.html
+++ b/bulletin.html
@@ -89,7 +89,7 @@
                     <div class="feature">
                         <div class="img_box">
                             <a href="#">
-                                <img src="img/service1.png" class="img-responsive">
+                                <img src="img/allez2.jpg" class="img-responsive">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
