--- a/marseille.html
+++ b/marseille.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Business Template</title>
+  <title>Marseille</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -133,33 +133,30 @@
                 </div>
 
                 <div class="col-sm-10 description_wrapper">
-                    <h5>Beautiful on all devices</h5>
+                    <h5>Voyages</h5>
                     <p>
-                        There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don’t look even slightly distracted by these distribution of letters, as opposed to using  Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
+                     <b>ROME ET SES ENVIRONS </b> : du 10 au 16 avril avec Gérard,DARSON.<br><br>
+                      Inscriptions s'adresser à Alix MARTIN, tél. 04 91 342 512, mail samh.med13@orange.fr
+
+. </p>
                 </div>
             </div>
 
             <div class="row perk">
                 <div class="col-sm-2 circle">
                 </div>
+                <br>
 
                 <div class="col-sm-10 description_wrapper">
-                    <h5>Blog page included</h5>
+                    <h5>Visites</h5>
                     <p>
-                        There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don't look even slightly distracted by these distribution of letters, as opposed to using  Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don't look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
+                        <b> LE LUBERON, ANSOUIS ET LA TOUR D’AIGUES</b>: Samedi 31 Janvier <br> <br>
+                        <b>  LES PARFUMS A MOUANS-SARTOUX ET AU MUSEE DE GRASSE</b>: Mercredi 26 Mars </p>
                 </div>
             </div>
 
-            <div class="row perk last">
-                <div class="col-sm-2 circle">
-                    <img src="img/service_ico3.png" alt="">
-                </div>
 
-                <div class="col-sm-10 description_wrapper">
-                    <h5>Simple and clean coming soon page</h5>
-                    <p>
-                        There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don't look even slightly distracted by these distribution of letters, as opposed to using. Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don't look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
-                </div>
+
             </div>
         </div>
     </div>
