--- a/nantes.html
+++ b/nantes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Business Template</title>
+  <title>Nantes</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -133,9 +133,14 @@
                 </div>
 
                 <div class="col-sm-10 description_wrapper">
-                    <h5>Beautiful on all devices</h5>
+                    <h5>Voyages</h5>
                     <p>
-                        There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don’t look even slightly distracted by these distribution of letters, as opposed to using  Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
+                        <b>MALTE </b>: Fin Septembre (dates à préciser). <br><br>
+
+                        <b>Inscriptions</b> s'adresser à Patrice MORETTE-BOURNY, tél. 06 58 58 99 95
+ mail info@samh-oceanique.info
+
+                      </p>
                 </div>
             </div>
 
@@ -144,22 +149,17 @@
                 </div>
 
                 <div class="col-sm-10 description_wrapper">
-                    <h5>Blog page included</h5>
+                    <h5>Visites</h5>
                     <p>
-                        There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don't look even slightly distracted by these distribution of letters, as opposed to using  Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don't look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
+                        <b> LE MUSEE D’HISTOIRE DE LA VILLE DE NANTES AU CHÂTEAU DES DUCS DE BRETAGNE : </b> Jeudi 19 Février (horaire à confirmer) <br><br>
+
+                        <b> - LE MUSEE DES PAYS DE RETZ :</b> En Avril (date et horaire à préciser).
+
+                      </p>
                 </div>
             </div>
 
-            <div class="row perk last">
-                <div class="col-sm-2 circle">
-                    <img src="img/service_ico3.png" alt="">
-                </div>
 
-                <div class="col-sm-10 description_wrapper">
-                    <h5>Simple and clean coming soon page</h5>
-                    <p>
-                        There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don't look even slightly distracted by these distribution of letters, as opposed to using. Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don't look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
-                </div>
             </div>
         </div>
     </div>
