--- a/paris.html
+++ b/paris.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Business Template</title>
+  <title>Paris</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/compiled/theme.css" />
 
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/compiled/services.css" type="text/css" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/lib/animate.css" media="screen, projection" />
@@ -133,32 +134,43 @@
                 </div>
 
                 <div class="col-sm-10 description_wrapper">
-                    <h5>Beautiful on all devices</h5>
+                    <h5>Voyages</h5>
                     <p>
-                        There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don’t look even slightly distracted by these distribution of letters, as opposed to using  Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
-                </div>
+                     <b>CUBA</b> : Du 6 au 16 Mars 2015<br>
+                      <b>L'ARDECHE</b> avec un fac-smile de la grotte chauvet : Du 29 au 31 Mars 2015<br>
+                      <b>CHYPRE</b> : Du 20 au 26 Septembre 2015<br>
+. </p>
+            </div>
             </div>
 
             <div class="row perk">
                 <div class="col-sm-2 circle">
+                <i class="fa fa-globe"></i>
                 </div>
 
                 <div class="col-sm-10 description_wrapper">
-                    <h5>Blog page included</h5>
+                    <h5>Visites</h5>
                     <p>
-                        There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don't look even slightly distracted by these distribution of letters, as opposed to using  Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don't look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
+                  <b>L’INSTITUT DE LA VISION AUX QUINZE VINGTS</b> le mardi 27 janvier à 13h 45, visite guidée par le Professeur Alvaro RENDON.<br>
+                   <b> LA GRANDE GALERIE DE L’EVOLUTION</b> Jeudi 26 Mars à 19h30, visite guidée par Michel van PRAET
+
+.                         </p>
                 </div>
             </div>
 
             <div class="row perk last">
                 <div class="col-sm-2 circle">
-                    <img src="img/service_ico3.png" alt="">
+                    <img src="" alt="">
                 </div>
 
                 <div class="col-sm-10 description_wrapper">
-                    <h5>Simple and clean coming soon page</h5>
+                    <h5>Conférances</h5>
                     <p>
-                        There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don't look even slightly distracted by these distribution of letters, as opposed to using. Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don't look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
+                        Des conférences/projections organisées en partenariat avec le <b>Musée de l'Homme.</b><br>
+                        Des rendez-vous avec les chercheurs du <b>Museum d'Histoire Naturelle.</b><br>
+
+              Demander le <b>programme</b> auprès du secrétariat de la Société des Amis par :
+e-mail : samh@mnhn.fr  ou téléphone : 01 47 04 62 10. </p>
                 </div>
             </div>
         </div>
