--- a/bulletin.html
+++ b/bulletin.html
@@ -96,7 +96,7 @@
                             </a>
                         </div>
                         <div class="text">
-                            <h6>Muséum National d'Histoire Naturelle </h6>
+                            <h6>Oeuvre de Savignac </h6>
                             <p></p>
                         </div>
                     </div>
