--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
  l'enrichissement de ses collections et en l'aidant à développer ses
  activités. L'association qui possède deux antennes régionales , l'une à Marseille ,
  l'autre à Nantes ,organise pour ses membres des conférences , des visites
-  des voyages culturels. </font> </p>
+  et des voyages culturels. </font> </p>
  </div>
 
                             </p> </center>
