--- a/organisation.html
+++ b/organisation.html
@@ -46,7 +46,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Association <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="organisation.html">Organisation</a></li>
+                            <li><a href="organisation.html">Administration</a></li>
                             <li><a href="histoire.html">Un peu d'Histoire...</a></li>
                         </ul>
 
@@ -76,12 +76,17 @@
     <div id="aboutus">
         <div class="container">
             <div class="section_header">
-                <h3>Organisation</h3>
+                <h3>Administration</h3>
             </div>
             <div class="row">
                 <div class="col-sm-12 intro">
                     <h6>L'association est administrée par un Conseil composé de membres élus par les adhérents et de membres d'honneur.</h6>
+                    <br>
+                    <div class="section_header">
+                <h3>Organisation</h3>
+            </div>
                     <p>
+
                         <b>Le Bureau de l'association:</b> Président : Vincent Timothée. Vice-Présidente : Nancy Wise. Vice-Président : Alain Monod. Secrétaire général : Denis Picard. Trésorière : Brigitte Champeil. Déléguée générale : Irène Mc Cluskey.
                         <br /><br />
                         <b>Les membres élus:</b> Christian Coiffier. Sophie Duval-Huwart. Marie-Claude Hamon. Christine Hemmet. Chantal Jourdan. Jean-Pierre Mohen. Françoise Monier. Marilys de la Morandière. Suzanne Robin. François Rodhain.
@@ -108,10 +113,10 @@
     <div id="process">
         <div class="container">
             <div class="section_header">
-                <h3> 3 Antennes </h3>
+                <h3> 2 Antennes </h3>
             </div>
             <p>
-                            L'association compte 3 antennes en France. Le siège, situé à Paris, ainsi que 2 bases régionales : Marseille et Bordeaux.<b> Cliquez-ci dessous</b> pour obtenir plus d'informations. </p>
+                            L'association compte 2 antennes, l'antenne Méditerranée à Marseille et l'antenne Océanie à Nantes.<b> Cliquez-ci dessous</b> pour obtenir plus d'informations. </p>
 
                             </br>
                             </br>
@@ -121,7 +126,7 @@
                     <div class="text active">
                         <h4>Paris</h4>
                         <p>
-                            Présidée par Vincent Timothée, Secrétaire général : Anne-Marie SUIDE. Adresse : 17 place du Trocadero 75116 PARIS Tél. 01 47 04 62 10 Courriel : samh@mnhn.fr </p>
+                             Siège: 17 place du Trocadero 75116 PARIS Tél. 01 47 04 62 10 Courriel : samh@mnhn.fr </p>
                     </div>
                     <div class="text">
                         <h4>Méditerranée</h4>
