--- a/paris.html
+++ b/paris.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Paris</title>
+  <title>SAMH - Site Officiel</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -47,7 +47,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Association <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="organisation.html">Organisation</a></li>
+                            <li><a href="organisation.html">Administration</a></li>
                             <li><a href="histoire.html">Un peu d'Histoire...</a></li>
                         </ul>
 
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="col-sm-10 description_wrapper">
-                    <h5>Conférances</h5>
+                    <h5>Conférences</h5>
                     <p>
                         Des conférences/projections organisées en partenariat avec le <b>Musée de l'Homme.</b><br>
                         Des rendez-vous avec les chercheurs du <b>Museum d'Histoire Naturelle.</b><br>
