--- a/histoire.html
+++ b/histoire.html
@@ -46,7 +46,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Association <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="organisation.html">Organisation</a></li>
+                            <li><a href="organisation.html">Administration</a></li>
                             <li><a href="histoire.html">Un peu d'Histoire...</a></li>
                         </ul>
 
