--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Association <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="organisation.html">Organisation</a></li>
+                            <li><a href="organisation.html">Administration</a></li>
                             <li><a href="histoire.html">Un peu d'Histoire...</a></li>
                         </ul>
 
@@ -89,8 +89,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="paris.html">Paris</a></li>
-                            <li><a href="marseille.html">Méditérranée</a></li>
-                            <li><a href="nantes.html">Océanique</a></li>
+                            <li><a href="marseille.html">Antenne Méditérranée</a></li>
+                            <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
