--- a/marseille.html
+++ b/marseille.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Marseille</title>
+  <title>SAMH - Site Officiel</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -46,7 +46,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Association <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="organisation.html">Organisation</a></li>
+                            <li><a href="organisation.html">Administration</a></li>
                             <li><a href="histoire.html">Un peu d'Histoire...</a></li>
                         </ul>
 
