come back commit

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class= "row feature_wrapper">
                         </div>
                         <div id= "intro">
-                            <center><p> <font>La société des amis du Musée de l'Homme est une association reconnue
+                            <center><p> <font>La société des amis du Musée de l'Homme est une association reconnue.
  d'utilité publique dont le but est d'aider le Musée de l'Homme en
  soutenant le travail de ses chercheurs , en contribuant à
  l'enrichissement de ses collections et en l'aidant à développer ses
