--- a/index.html
+++ b/index.html
@@ -174,11 +174,10 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <h3 class="footer_header">
                         Contact
                     </h3>
-                    <form action="#" method="post">
-                        <input type="text" placeholder="Email : samh@mnhn.fr" />
-                        <input type="text" placeholder="Téléphone : 01 47 04 62 10" />
-                        <textarea rows="3" placeholder="17 Place du Trocadero 75116 - Paris"></textarea>
-                    </form>
+                    <p> <b> Email :</b> samh@mnhn.fr<p>
+                    <p> Téléphone : 01 47 04 62 10" </p>
+                    <p> 17 Place du Trocadero 75116 - Paris </p>
+
                 </div>
             </div>
 
