--- a/index.html
+++ b/index.html
@@ -171,12 +171,14 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                 </div>
 
                  <div class="col-sm-4 contact">
-                    <h3 class="footer_header">
+                    <h3 class="footer_header" >
                         Contact
                     </h3>
+                    <br>
+                    <br>
                     <p> <b> Email :</b> samh@mnhn.fr<p>
-                    <p> Téléphone : 01 47 04 62 10" </p>
-                    <p> 17 Place du Trocadero 75116 - Paris </p>
+                    <p> <b>Téléphone : </b> 01 47 04 62 10" </p>
+                    <p> <b> 17 Place du Trocadero 75116 - Paris </b></p>
 
                 </div>
             </div>
