--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand"><strong>Société des Amis du Musée de l'Homme</strong></a>
+                 <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <img alt="SAMH" src="img/SAMH_logo.jpg">
+      </a>
+    </div>
+  </div>
+                <a href="index.html" class="navbar-brand"><strong>SAMH</strong></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse" role="navigation">
@@ -171,14 +178,18 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                 </div>
 
                  <div class="col-sm-4 contact">
-                    <h3 class="footer_header" >
-                        Contact
+                    <h3 class="footer_header" style="padding-right: 0px">
+
                     </h3>
                     <br>
                     <br>
+                    <br>
+                    <br>
+                    <br>
+
                     <p> <b> Email :</b> samh@mnhn.fr<p>
                     <p> <b>Téléphone : </b> 01 47 04 62 10" </p>
-                    <p> <b> 17 Place du Trocadero 75116 - Paris </b></p>
+                    <p> <b> 17 Place du Trocadero 75116, Paris </b></p>
 
                 </div>
             </div>
