--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                  <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-        <img alt="SAMH" src="..img/SAMH_Logo.jpg">
+        <img alt="SAMH" src="img/SAMH_Logo.jpg">
       </a>
     </div>
   </div>
