--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
 
 <div class="navbar navbar-inverse navbar marigin-bottom" role="navigation">
         <div class="container">
+                <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <img alt="SAMH" src="img/SAMH_Logo.jpg" width="22" height="22" >
+      </a>
+    </div>
+  </div>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle pull-right" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -65,14 +72,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                 <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        <img alt="SAMH" src="img/SAMH_Logo.jpg">
-      </a>
-    </div>
-  </div>
-                <a href="index.html" class="navbar-brand"><strong>SAMH</strong></a>
+
+                <a href="index.html" class="navbar-brand"><strong>Société des Amis de l'Homme</strong></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse" role="navigation">
@@ -119,7 +120,7 @@
     <div id="showcase" text-align: center;>
         <div class="container">
             <div class="section_header">
-                <center><h3>La Socièté des Amis du Musée de l'Homme</h3></center>
+                <center><h3>La Société des Amis du Musée de l'Homme</h3></center>
             </div>
             <div class= "row feature_wrapper">
                         </div>
@@ -178,18 +179,19 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                 </div>
 
                  <div class="col-sm-4 contact">
+
+                    <br>
+                    <br>
+                    <br>
+
+
                     <h3 class="footer_header" style="padding-right: 0px">
-
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/SAMH_Logo.jpg" width="94" height="94" margin-right="2px">
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    </a>
                     </h3>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-
-                    <p> <b> Email :</b> samh@mnhn.fr<p>
-                    <p> <b>Téléphone : </b> 01 47 04 62 10" </p>
-                    <p> <b> 17 Place du Trocadero 75116, Paris </b></p>
 
                 </div>
             </div>
