commit new nav + others

--- a/aide.html
+++ b/aide.html
@@ -119,14 +119,20 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                 </div>
 
                  <div class="col-sm-4 contact">
-                    <h3 class="footer_header">
-                        Contact
+
+                    <br>
+                    <br>
+                    <br>
+
+
+                    <h3 class="footer_header" style="padding-right: 0px">
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/SAMH_Logo.jpg" width="94" height="94" margin-right="2px">
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    </a>
                     </h3>
-                    <form action="#" method="post">
-                        <input type="text" placeholder="Email : samh@mnhn.fr" />
-                        <input type="text" placeholder="Téléphone : 01 47 04 62 10" />
-                        <textarea rows="3" placeholder="17 Place du Trocadero 75116 - Paris"></textarea>
-                    </form>
+
                 </div>
             </div>
 
