--- a/organisation.html
+++ b/organisation.html
@@ -54,8 +54,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="paris.html">Paris</a></li>
-                            <li><a href="marseille.html">Méditérranée</a></li>
-                            <li><a href="nantes.html">Océanique</a></li>
+                            <li><a href="marseille.html">Antenne Méditérranée</a></li>
+                            <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -116,7 +116,7 @@
                 <h3> 2 Antennes </h3>
             </div>
             <p>
-                            L'association compte 2 antennes, l'antenne Méditerranée à Marseille et l'antenne Océanie à Nantes.<b> Cliquez-ci dessous</b> pour obtenir plus d'informations. </p>
+                            L'association compte 2 antennes, l'antenne <b>Méditerranée</b> à Marseille et l'antenne <b>Océanie</b> à Nantes.<b> Cliquez-ci dessous</b> pour obtenir plus d'informations. </p>
 
                             </br>
                             </br>
@@ -141,10 +141,7 @@
                 </div>
 
                 <div class="col-sm-7 areas">
-                    <div class="circle active">
-                        <img src="img/plan.png" />
-                        <span>Paris</span>
-                    </div>
+
                     <div class="circle">
                         <img src="img/plan.png" />
                         <span>Marseille</span>
