--- a/paris.html
+++ b/paris.html
@@ -55,8 +55,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="paris.html">Paris</a></li>
-                            <li><a href="marseille.html">Méditérranée</a></li>
-                            <li><a href="nantes.html">Océanique</a></li>
+                            <li><a href="marseille.html">Antenne Méditérranée</a></li>
+                            <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -145,7 +145,7 @@
 
             <div class="row perk">
                 <div class="col-sm-2 circle">
-                <i class="fa fa-globe"></i>
+                <i class=""></i>
                 </div>
 
                 <div class="col-sm-10 description_wrapper">
