--- a/marseille.html
+++ b/marseille.html
@@ -54,8 +54,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="paris.html">Paris</a></li>
-                            <li><a href="marseille.html">Méditérranée</a></li>
-                            <li><a href="nantes.html">Océanique</a></li>
+                            <li><a href="marseille.html">Antenne Méditérranée</a></li>
+                            <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
