--- a/organisation.html
+++ b/organisation.html
@@ -124,9 +124,9 @@
             <div class="row services_circles">
                 <div class="col-sm-4 description">
                     <div class="text active">
-                        <h4>Paris</h4>
+                        <h4>Socièté des amis</h4>
                         <p>
-                             Siège: 17 place du Trocadero 75116 PARIS Tél. 01 47 04 62 10 Courriel : samh@mnhn.fr </p>
+                             17 place du Trocadero 75116 PARIS Tél. 01 47 04 62 10 Courriel : samh@mnhn.fr </p>
                     </div>
                     <div class="text">
                         <h4>Méditerranée</h4>
