--- a/paris.html
+++ b/paris.html
@@ -83,8 +83,8 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="#">
-                                <img src="img/service1.png" class="img-responsive">
+                            <a href="img/desert.png">
+                                <img src="img/desert.png" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -96,8 +96,8 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="#">
-                                <img src="img/service2.png" class="img-responsive">
+                            <a href="img/sable.png">
+                                <img src="img/sable.png" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -109,8 +109,8 @@
                 <div class="col-sm-4">
                     <div class="feature last">
                         <div class="img_box">
-                            <a href="#">
-                                <img src="img/service3.png" class="img-responsive">
+                            <a href="img/bateau.png">
+                                <img src="img/bateau.png" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
