--- a/dons.html
+++ b/dons.html
@@ -86,7 +86,55 @@ par les lois du 1 Août 2003 et du 18 janvier 2005 , une déductibilité de 66% 
 Les dons faits par des entreprises sont éligibles aux dispositions des
 lois sur le mécénat d'entreprise , soit une déduction de 60% dessommes
 versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
-                   </br>
+
+      <div id="service_1">
+        <div class="container">
+            <div class="section_header">
+            </div>
+            <div class="row service_wrapper">
+                <div class="col-sm-4">
+                    <div class="feature">
+                        <div class="img_box">
+                            <a href="img/italie.png">
+                                <img src="img/italie.png" width="290" height="190">
+                                <span class="circle">
+                                    <span class="plus">&#43;</span>
+                                </span>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="feature">
+                        <div class="img_box">
+                            <a href="img/bouddah.png">
+                                <img src="img/bouddah.png" width="290" height="190">
+                                <span class="circle">
+                                    <span class="plus">&#43;</span>
+                                </span>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="feature last">
+                        <div class="img_box">
+                            <a href="img/afrique.png">
+                                <img src="img/afrique.png" width="290" height="190" topmargin="10px">
+                                <span class="circle">
+                                    <span class="plus">&#43;</span>
+                                </span>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </br>
 
                 <center><h2>Dons </h></center>
 </br>
