nag, footer, new adhesion orga

--- a/avantages.html
+++ b/avantages.html
@@ -52,7 +52,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="paris.html">Paris</a></li>
+                            <li><a href="paris.html">Socièté des Amis</a></li>
                             <li><a href="marseille.html">Méditérranée</a></li>
                             <li><a href="nantes.html">Océanique</a></li>
                         </ul>
@@ -60,9 +60,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Adhésions <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="tarifs.html">Tarifs</a></li>
-                            <li><a href="avantages.html">Avantages</a></li>
-                            <li><a href="bulletin.html">Bulletin</a></li>
+                             <li><a href="tarifs.html">Adhérer</a></li>
+                            <li><a href="avantages.html">FAQ</a></li>
                         </ul>
                     </li>
                     <li><a href="dons.html">Dons</a></li>
@@ -76,11 +75,49 @@
     <div id="in_pricing">
         <div class="container">
             <div class="head">
-                <h3> Avantages </h3>
-                <h6> Découvrez les priviléges exclusifs de nos membres</h6>
+                <h3> Foire Aux Questions </h3>
+                <h6> Si vous avez d'autres intérrogations nous pouvons y répondre</h6>
             </div>
 
-              <!-- Service Option 1 -->
+
+    <!-- FAQs -->
+    <div id="faq">
+        <div class="container">
+            <div class="section_header">
+                <h3>[FAQ] Foire Aux Questions</h3>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6 block">
+                    <div class="box">
+                        <p class="title"> Si j'adhère en septembre d'une année , mon règlement est-il valable pour l'année suivante ? </p>
+                        <p class="answ">
+                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                    </div>
+                    <div class="box">
+                        <p class="title">Is there a discount for yearly service?</p>
+                        <p class="answ">
+                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 block">
+                    <div class="box">
+                        <p class="title">Si je suis adhérent à Marseille , est-ce que je peux participer à une visite organisée ? </p>
+                        <p class="answ">
+                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                    </div>
+                    <div class="box">
+                        <p class="title">Is there a discount for yearly service?</p>
+                        <p class="answ">
+                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+                  <!-- Service Option 1 -->
 
             <div class="section_header">
             </div>
@@ -136,52 +173,13 @@
                 </div>
             </div>
 </br>
-    <!-- FAQs -->
-    <div id="faq">
-        <div class="container">
-            <div class="section_header">
-                <h3>Avantages de nos membres</h3>
-            </div>
+</br>
+</br>
 
-            <div class="row">
-                <div class="col-sm-6 block">
-                    <div class="box">
-                        <p class="title">La lettre SAMH</p>
-                        <p class="answ">
-                            Réception de <b>la Lettre de la SAMH </b>et des programmes des activités de l'association et du musée de l'Homme.</p>
-                    </div>
-                    <div class="box">
-                        <p class="title">Voyages culturels</p>
-                        <p class="answ">
-                            Possibilité de participer aux <b>voyages culturels </b> organisés en France et dans de nombreux pays du monde, conçus tout spécialement pour la société.</p>
-                    </div>
-                    <div class="box">
-                        <p class="title">Visites et conférences</p>
-                        <p class="answ">
-                            Accès aux <b>visites et conférences</b> organisées par la SAMH.</p>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 block">
-                    <div class="box">
-                        <p class="title">Entrée gratuite</p>
-                        <p class="answ">
-                            <b>Entrée gratuite</b> au Muséum national d'Histoire naturelle, la grande galerie de l'évolution et son exposition temporaire, la galerie de paléontologie de d'anatomie comparée et le cabinet d'histoire. </p>
-                    </div>
-                    <div class="box">
-                        <p class="title">Entrée à tarif réduit</p>
-                        <p class="answ">
-                            Entrée à tarif réduit</b> dans les autres sites du Jardin des plantes, arboretum de Chèvreloup, parc zoologique d'Azay-le-Ferron, laboratoire maritime de Dinard, Harmas de Fabre, jardin exotique de Menton.</p>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- Bulletin  -->
     <div class="start">
                 <p>Rejoignez-nous dés maintenant ! </p>
-                <a href="pricing.html">Adhérez </a>
+                <a href="pricing.html">Bulletin d'inscription</a>
             </div>
         </div>
     </div>
@@ -200,15 +198,21 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     </div>
                 </div>
 
-                 <div class="col-sm-4 contact">
-                    <h3 class="footer_header">
-                        Contact
+                  <div class="col-sm-4 contact">
+
+                    <br>
+                    <br>
+                    <br>
+
+
+                    <h3 class="footer_header" style="padding-right: 0px">
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/SAMH_Logo.jpg" width="94" height="94" margin-right="2px">
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    </a>
                     </h3>
-                    <form action="#" method="post">
-                        <input type="text" placeholder="Email : samh@mnhn.fr" />
-                        <input type="text" placeholder="Téléphone : 01 47 04 62 10" />
-                        <textarea rows="3" placeholder="17 Place du Trocadero 75116 - Paris"></textarea>
-                    </form>
+
                 </div>
             </div>
 
