--- a/collections.html
+++ b/collections.html
@@ -23,15 +23,21 @@
 <body>
      <div class="navbar navbar-inverse navbar-static-top" role="navigation">
         <div class="container">
+
             <div class="navbar-header">
+
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+
+
                 <a href="index.html" class="navbar-brand"><strong>Société des Amis du Musée de l'Homme</strong></a>
             </div>
+
 
             <div class="collapse navbar-collapse navbar-ex1-collapse" role="navigation">
                <ul class="nav navbar-nav navbar-right">
@@ -53,7 +59,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="paris.html">Paris</a></li>
+                            <li><a href="paris.html">Socièté des Amis</a></li>
                             <li><a href="marseille.html">Antenne Méditérranée</a></li>
                             <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
