--- a/dons.html
+++ b/dons.html
@@ -52,7 +52,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="paris.html">Paris</a></li>
+                            <li><a href="paris.html">Socièté des Amis</a></li>
                             <li><a href="marseille.html">Antenne Méditérranée</a></li>
                             <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
@@ -60,9 +60,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Adhésions <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="tarifs.html">Tarifs</a></li>
-                            <li><a href="avantages.html">Avantages</a></li>
-                            <li><a href="bulletin.html">Bulletin</a></li>
+                             <li><a href="tarifs.html">Adhérer</a></li>
+                            <li><a href="avantages.html">FAQ</a></li>
                         </ul>
                     </li>
                     <li><a href="dons.html">Dons</a></li>
@@ -218,18 +217,23 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     </div>
                 </div>
 
-                 <div class="col-sm-4 contact">
-                    <h3 class="footer_header">
-                        Contact
+                  <div class="col-sm-4 contact">
+
+                    <br>
+                    <br>
+                    <br>
+
+
+                    <h3 class="footer_header" style="padding-right: 0px">
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/SAMH_Logo.jpg" width="94" height="94" margin-right="2px">
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    </a>
                     </h3>
-                    <form action="#" method="post">
-                        <input type="text" placeholder="Email : samh@mnhn.fr" />
-                        <input type="text" placeholder="Téléphone : 01 47 04 62 10" />
-                        <textarea rows="3" placeholder="17 Place du Trocadero 75116 - Paris"></textarea>
-                    </form>
+
                 </div>
             </div>
-
             <div class="row credits">
                 <div class="col-md-12">
                     <div class="row social">
