--- a/organisation.html
+++ b/organisation.html
@@ -53,7 +53,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="paris.html">Paris</a></li>
+                            <li><a href="paris.html">Socièté des Amis</a></li>
                             <li><a href="marseille.html">Antenne Méditérranée</a></li>
                             <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
@@ -61,9 +61,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Adhésions <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="tarifs.html">Tarifs</a></li>
-                            <li><a href="avantages.html">Avantages</a></li>
-                            <li><a href="bulletin.html">Bulletin</a></li>
+                             <li><a href="tarifs.html">Adhérer</a></li>
+                            <li><a href="avantages.html">FAQ</a></li>
                         </ul>
                     </li>
                     <li><a href="dons.html">Dons</a></li>
@@ -116,17 +115,18 @@
                 <h3> 2 Antennes </h3>
             </div>
             <p>
-                            L'association compte 2 antennes, l'antenne <b>Méditerranée</b> à Marseille et l'antenne <b>Océanie</b> à Nantes.<b> Cliquez-ci dessous</b> pour obtenir plus d'informations. </p>
+                            L'association compte 2 antennes, l'antenne <b>Méditerranée</b> à Marseille et l'antenne <b>Océanie</b> à Nantes.<b> Cliquez-ci dessous</b> pour obtenir plus d'informations. Le siège de la socièté des amis se trouve au <B> 17 place du Trocadero 75116 PARIS. </B></p>
 
                             </br>
                             </br>
 
             <div class="row services_circles">
-                <div class="col-sm-4 description">
-                    <div class="text active">
-                        <h4>Socièté des amis</h4>
+                <div class="col-sm-5 description">
+                        <div class="text active">
+                      <h4>Siège des amis</h4>
                         <p>
-                             17 place du Trocadero 75116 PARIS Tél. 01 47 04 62 10 Courriel : samh@mnhn.fr </p>
+                            17 Place du Trocadero 75116, Paris. Tel : 01 47 04 62 10. Courriel : samh@mnhn.fr  </p>
+
                     </div>
                     <div class="text">
                         <h4>Méditerranée</h4>
@@ -142,6 +142,10 @@
 
                 <div class="col-sm-7 areas">
 
+                    <div class="circle">
+                        <img src="img/plan.png" />
+                        <span>Paris</span>
+                    </div>
                     <div class="circle">
                         <img src="img/plan.png" />
                         <span>Marseille</span>
@@ -169,14 +173,20 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                 </div>
 
                  <div class="col-sm-4 contact">
-                    <h3 class="footer_header">
-                        Contact
+
+                    <br>
+                    <br>
+                    <br>
+
+
+                    <h3 class="footer_header" style="padding-right: 0px">
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/SAMH_Logo.jpg" width="94" height="94" margin-right="2px">
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    </a>
                     </h3>
-                    <form action="#" method="post">
-                        <input type="text" placeholder="Email : samh@mnhn.fr" />
-                        <input type="text" placeholder="Téléphone : 01 47 04 62 10" />
-                        <textarea rows="3" placeholder="17 Place du Trocadero 75116 - Paris"></textarea>
-                    </form>
+
                 </div>
             </div>
 
