--- a/tarifs.html
+++ b/tarifs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Business Template</title>
+	<title>SAMH - Site Officiel</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -52,17 +52,16 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="paris.html">Paris</a></li>
-                            <li><a href="marseille.html">Méditérranée</a></li>
-                            <li><a href="nantes.html">Océanique</a></li>
+                            <li><a href="paris.html">Socièté des Amis</a></li>
+                            <li><a href="marseille.html">Antenne Méditérranée</a></li>
+                            <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Adhésions <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="tarifs.html">Tarifs</a></li>
-                            <li><a href="avantages.html">Avantages</a></li>
-                            <li><a href="bulletin.html">Bulletin</a></li>
+                            <li><a href="tarifs.html">Adhérer</a></li>
+                            <li><a href="avantages.html">FAQ</a></li>
                         </ul>
                     </li>
                     <li><a href="dons.html">Dons</a></li>
@@ -173,7 +172,7 @@
                             <div class="features">
                                 <p>
                                     <strong></strong>
-                                    A partir de 170 €...
+                                    A partir de 170 €
                                 </p>
                                 <p>
                                     <strong>
@@ -196,47 +195,53 @@
 
                 <!-- Plan Box -->
 
-
-    <!-- FAQs -->
-    <div id="faq">
+<div id="faq">
         <div class="container">
             <div class="section_header">
-                <h3>[FAQ] Foire Aux Questions</h3>
+                <h3>Avantages de nos membres</h3>
             </div>
 
             <div class="row">
                 <div class="col-sm-6 block">
                     <div class="box">
-                        <p class="title">How long are your contracts?</p>
+                        <p class="title">La lettre SAMH</p>
                         <p class="answ">
-                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                            Réception de <b>la Lettre de la SAMH </b>et des programmes des activités de l'association et du musée de l'Homme.</p>
                     </div>
                     <div class="box">
-                        <p class="title">How do i sign up?</p>
+                        <p class="title">Voyages culturels</p>
                         <p class="answ">
-                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                            Possibilité de participer aux <b>voyages culturels </b> organisés en France et dans de nombreux pays du monde, conçus tout spécialement pour la société.</p>
+                    </div>
+                    <div class="box">
+                        <p class="title">Visites et conférences</p>
+                        <p class="answ">
+                            Accès aux <b>visites et conférences</b> organisées par la SAMH.</p>
                     </div>
                 </div>
 
                 <div class="col-sm-6 block">
                     <div class="box">
-                        <p class="title">What is meant by unlimited?</p>
+                        <p class="title">Entrée gratuite</p>
                         <p class="answ">
-                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                            <b>Entrée gratuite</b> au Muséum national d'Histoire naturelle, la grande galerie de l'évolution et son exposition temporaire, la galerie de paléontologie de d'anatomie comparée et le cabinet d'histoire. </p>
                     </div>
                     <div class="box">
-                        <p class="title">Is there a discount for yearly service?</p>
+                        <p class="title">Entrée à tarif réduit</p>
                         <p class="answ">
-                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                            Entrée à tarif réduit</b> dans les autres sites du Jardin des plantes, arboretum de Chèvreloup, parc zoologique d'Azay-le-Ferron, laboratoire maritime de Dinard, Harmas de Fabre, jardin exotique de Menton.</p>
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
+
+
     <!-- Bulletin  -->
     <div class="start">
                 <p>Rejoignez-nous dés maintenant ! </p>
-                <a href="pricing.html">Adhérez </a>
+                <a href="pricing.html">Bulletin </a>
             </div>
         </div>
     </div>
@@ -255,18 +260,23 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     </div>
                 </div>
 
-                 <div class="col-sm-4 contact">
-                    <h3 class="footer_header">
-                        Contact
+                  <div class="col-sm-4 contact">
+
+                    <br>
+                    <br>
+                    <br>
+
+
+                    <h3 class="footer_header" style="padding-right: 0px">
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/SAMH_Logo.jpg" width="94" height="94" margin-right="2px">
+                    <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    </a>
                     </h3>
-                    <form action="#" method="post">
-                        <input type="text" placeholder="Email : samh@mnhn.fr" />
-                        <input type="text" placeholder="Téléphone : 01 47 04 62 10" />
-                        <textarea rows="3" placeholder="17 Place du Trocadero 75116 - Paris"></textarea>
-                    </form>
+
                 </div>
             </div>
-
             <div class="row credits">
                 <div class="col-md-12">
                     <div class="row social">
