--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <div class="navbar navbar-inverse navbar marigin-bottom" role="navigation">
         <div class="container">
                 <div class="container-fluid">
-    <div class="navbar-header">
-      <!--><a class="navbar-brand" href="#">
+    <!--><div class="navbar-header">
+      <a class="navbar-brand" href="#">
          <img alt="SAMH" src="img/SAMH_Logo_bis.png" width="32" height="32" >
       </a>
     </div> <!-->
